// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Touchable Tests Text components can be tappable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "tappable_text",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Text has built-in onPress handling",
    "TextRangePattern.GetText": "Text has built-in onPress handling",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "tappable_text",
    },
  },
  "Visual Tree": {
    "Comment": "tappable_text",
    "Offset": "0, 0, 0",
    "Size": "916, 20",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Touchable Tests TouchableWithoutFeedback components should not give visual feedback 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_without_feedback_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Tap Here For No Feedback!",
        "TextRangePattern.GetText": "Tap Here For No Feedback!",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "touchable_without_feedback_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "touchable_without_feedback_button",
    "Offset": "0, 0, 0",
    "Size": "916, 33",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "6, 6, 0",
        "Size": "904, 22",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "904, 22",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Touchable Tests Touchables can contain a Text component 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_highlight_text_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Tap Here For Custom Highlight!",
        "TextRangePattern.GetText": "Tap Here For Custom Highlight!",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "touchable_highlight_text_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "touchable_highlight_text_button",
    "Offset": "0, 0, 0",
    "Size": "234, 50",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "6, 6, 0",
        "Size": "224, 22",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "224, 22",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Touchable Tests Touchables can contain an Image component 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_highlight_image_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "touchable_highlight_image_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ImageComponentView",
        "_Props": {
          "Sources": [
            {
              "Type": "Remote",
              "Uri": "https://www.facebook.com/favicon.ico",
            },
          ],
        },
      },
    ],
  },
  "Visual Tree": {
    "Comment": "touchable_highlight_image_button",
    "Offset": "0, 0, 0",
    "Size": "50, 50",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "50, 50",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "50, 50",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Touchable Tests Touchables can delay events 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_delay_events_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Press Me",
        "TextRangePattern.GetText": "Press Me",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "touchable_delay_events_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "touchable_delay_events_button",
    "Offset": "0, 0, 0",
    "Size": "56, 19",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "56, 19",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "56, 19",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Touchable Tests Touchables can enable a hit slop region 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_hit_slop_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Press Outside This View",
        "TextRangePattern.GetText": "Press Outside This View",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "touchable_hit_slop_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 0, 0, 255)",
    },
    "Comment": "touchable_hit_slop_button",
    "Offset": "0, 0, 0",
    "Size": "146, 18",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "146, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "146, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Touchable Tests Touchables can register feedback events 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_feedback_events_button",
    "ControlType": 50000,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "touchable feedback events",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Press Me",
        "TextRangePattern.GetText": "Press Me",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "touchable feedback events",
      "TestId": "touchable_feedback_events_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "touchable_feedback_events_button",
    "Offset": "0, 0, 0",
    "Size": "56, 18",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "56, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "56, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;
